src/test/ui/borrowck/borrowck-migrate-to-nll.edition.stderr
error[E0502]: cannot borrow `*block.current` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-migrate-to-nll.rs:29:21
   |
LL |     let x = &mut block;
   |             ---------- mutable borrow occurs here
LL |     let p: &'a u8 = &*block.current;
   |                     ^^^^^^^^^^^^^^^ immutable borrow occurs here
...
LL |     drop(x);
   |          - mutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
